--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tabletalk",
-  "version": "1.0.0",
-  "description": "",
+  "name": "tabletalk-backend",
+  "version": "1.0.1",
+  "description": "Backend for TableTalk",
   "main": "server.js",
   "scripts": {
     "server": "node server.js",
@@ -11,8 +11,5 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "mongodb": "^3.6.3"
-  },
-  "devDependencies": {
-    "jest": "^26.6.3"
   }
 }
