--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bcrypt": "^5.1.1",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "mongodb": "^6.15.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
